protocols/tests/identities/identity_d1/explicit_fork.out
error: The two expressions did not evaluate to the same value
   ┌─ identities/identity_d1/identity_d1.prot:12:13
   │
12 │   assert_eq(s, DUT.s);
   │             ^^^^^^^^ LHS Value: 4, RHS Value: 3

